@@ -1,3 +1,8 @@
+2007-08-27  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil.Mdb/MdbWriter.cs:
+		Rewrite using the direct mdb api.
+
 2007-02-21  Jb Evain  <jb@nurv.fr>
 
 	* Start working on local var debug infos emitting.
